feat: add isPrimary option for images
